--- a/micro-app/pom.xml
+++ b/micro-app/pom.xml
@@ -17,6 +17,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <jakarta.validation.version>2.0.2</jakarta.validation.version>
         <spring-boot.version>2.3.1.RELEASE</spring-boot.version>
         <spring-boot-admin.version>2.2.1</spring-boot-admin.version>
         <mybatis.version>3.3.1</mybatis.version>
