--- a/micro-app/micro-business-A/micro-business-A-api/src/main/resources/config/application-local.yml
+++ b/micro-app/micro-business-A/micro-business-A-api/src/main/resources/config/application-local.yml
@@ -8,15 +8,21 @@ spring:
     active: local
   application:
     name: micro-business-A-api
+  cloud:
+    zookeeper:
+      connect-string: 127.0.0.1:2181,127.0.0.2:2181,127.0.0.3:2181
+      enabled: true
+      discovery:
+        instance-host: ${spring.cloud.client.ip-address}
   datasource:
     dynamic:
       primary: master #设置默认的数据源或者数据源组
       strict: false #设置严格模式,默认false不启动. 启动后在未匹配到指定数据源时候回抛出异常,不启动会使用默认数据源.
       datasource:
         master:
-          url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+          url: jdbc:mysql://192.168.30.242:3306/micro_service?useUnicode=true&characterEncoding=UTF-8&useSSL=false
           username: root
-          password: 123456
+          password: tydic2018
           driver-class-name: com.mysql.jdbc.Driver
         test:
           url: jdbc:mysql://127.0.0.2:3306/test?useUnicode=true&characterEncoding=UTF-8&useSSL=false
