架构序列六：springcloud项目下如何把zookeeper和zkui结合起来使用？动态配置应该怎么玩？

--- a/micro-app/micro-business-A/micro-business-A-api/src/main/resources/config/application-local.yml
+++ b/micro-app/micro-business-A/micro-business-A-api/src/main/resources/config/application-local.yml
@@ -20,9 +20,9 @@ spring:
       strict: false #设置严格模式,默认false不启动. 启动后在未匹配到指定数据源时候回抛出异常,不启动会使用默认数据源.
       datasource:
         master:
-          url: jdbc:mysql://192.168.30.242:3306/micro_service?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+          url: jdbc:mysql://127.0.0.2:3306/test?useUnicode=true&characterEncoding=UTF-8&useSSL=false
           username: root
-          password: tydic2018
+          password: 123456
           driver-class-name: com.mysql.jdbc.Driver
         test:
           url: jdbc:mysql://127.0.0.2:3306/test?useUnicode=true&characterEncoding=UTF-8&useSSL=false
