--- a/micro-app/micro-business-A/micro-business-A-feign/pom.xml
+++ b/micro-app/micro-business-A/micro-business-A-feign/pom.xml
@@ -3,18 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>micro-app</artifactId>
+        <artifactId>micro-business-A</artifactId>
         <groupId>com.laifeiyang.dev</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>micro-business-B</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>micro-business-B-api</module>
-        <module>micro-business-B-feign</module>
-    </modules>
+    <artifactId>micro-business-A-feign</artifactId>
 
 
 </project>
