--- a/micro-app/micro-business-A/pom.xml
+++ b/micro-app/micro-business-A/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>micro-business-A-api</module>
+        <module>micro-business-A-feign</module>
     </modules>
 
 
